--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
 # Compiled class file
 *.class
 
+# [IDE] Eclipse, STS4, intellij
+.settings
+bin
+target
+
+.classpath
+.factorypath
+.project
+
+.idea
+
 # Log file
 *.log
 
@@ -21,3 +32,5 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
