--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
     <artifactId>gson</artifactId>
     <version>2.10.1</version>
   </dependency>
+  
+<dependency>
+    <groupId>org.mindrot</groupId>
+    <artifactId>jbcrypt</artifactId>
+    <version>0.4</version>
+</dependency>
+
 
   </dependencies>
   
